--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="heroimage">
         <div class="header-container">
             <div id="logo-container">
-                <button class="buttonLogo">AUVENIR</button>
+                <button class="bttonLogo">AUVENIR</button>
             </div>
             <div id="filler"></div>
             <div id="button-container">
